--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     &nbsp
     <a href="https://www.instagram.com/isfet_/" style="color: white;"><i class="fab fa-instagram-square" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://hackappatoi.github.io/" style="color: white;"><i class="far fa-flag" style="font-size: 2em;"></i></a>
+    <a href="https://hackappatoi.github.io/" style="color: white;"><i class="fas fa-server" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://github.com/isf3t" style="color: white;"><i class="fab fa-github-square" style="font-size: 2em;"></i></a>
   </div>
