--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     &nbsp
     <a href="https://www.instagram.com/isfet_/" style="color: white;"><i class="fab fa-instagram-square" style="font-size: 2em;"></i></a>
     &nbsp
+    <a href="https://www.instagram.com/isfet_/" style="color: white;"><i class="fab fa-instagram-square" style="font-size: 2em;"></i></a>
+    &nbsp
     <a href="https://hackappatoi.github.io/" style="color: white;" title="@isfet - HACKappatoi - CTF Team"><i class="fas fa-server" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://github.com/isf3t" style="color: white;"><i class="fab fa-github-square" style="font-size: 2em;"></i></a>
